Run Flutter setup as sudo
Signed-off-by: Chaitanya Munukutla <chaitanya.m61292@gmail.com>

--- a/.github/workflows/build-snap.yaml
+++ b/.github/workflows/build-snap.yaml
@@ -15,6 +15,6 @@ jobs:
         uses: actions/checkout@v4
       - name: Setup Flutter
         run: |
-          snap install flutter --classic
+          sudo snap install flutter --classic
       - name: Run snapcraft
         uses: snapcore/action-build@v1
