--- a/.github/workflows/build-macos.yaml
+++ b/.github/workflows/build-macos.yaml
@@ -9,7 +9,7 @@ on:
       - main
 jobs:
   build:
-    runs-on: macos-latest-xl
+    runs-on: macos-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
