--- a/.github/workflows/build-macos.yaml
+++ b/.github/workflows/build-macos.yaml
@@ -3,13 +3,13 @@ on:
 
 jobs:
   test-job:
-    runs-on: ubuntu-latest
+    runs-on: macos-13
     steps:
       - name: "Checkout"
         uses: actions/checkout@v4
       - name: "Setup Flutter"
         run: |
-          sudo snap install flutter --classic
-      - name: "Run tests"
+          brew install flutter
+      - name: "Flutter macOS build"
         run: |
-          flutter test
+          flutter build macos
