--- a/.github/workflows/build-snap.yaml
+++ b/.github/workflows/build-snap.yaml
@@ -2,7 +2,7 @@ on:
   workflow_call:
 
 jobs:
-  test-job:
+  build-snap-job:
     runs-on: ubuntu-latest
     steps:
       - name: "Checkout"
@@ -10,6 +10,5 @@ jobs:
       - name: "Setup Flutter"
         run: |
           sudo snap install flutter --classic
-      - name: "Run tests"
-        run: |
-          flutter test
+      - name: "Run Snapcraft"
+        uses: snapcore/action-build@v1
