Move builders to a directory
Signed-off-by: Chaitanya Munukutla <chaitanya.m61292@gmail.com>

--- a/.github/workflows/build-snap.yaml
+++ b/.github/workflows/build-snap.yaml
@@ -12,3 +12,5 @@ jobs:
           sudo snap install flutter --classic
       - name: "Run Snapcraft"
         uses: snapcore/action-build@v1
+        with:
+          path: builders/
