--- a/builders/snap/snapcraft.yaml
+++ b/builders/snap/snapcraft.yaml
@@ -9,9 +9,9 @@ grade: devel
 
 parts:
   perimeter:
-    source: .
+    source: ./..
     plugin: flutter
-    flutter-target: lib/main.dart
+    flutter-target: ../lib/main.dart
 
 slots:
   dbus-perimeter:
