Add Cirrus CI docker image for tests
Signed-off-by: Chaitanya Munukutla <chaitanya.m61292@gmail.com>

--- a/.github/workflows/build-snap.yaml
+++ b/.github/workflows/build-snap.yaml
@@ -3,6 +3,7 @@ on:
 
 jobs:
   build-snap-job:
+    name: Build Linux-compatible Snap package
     runs-on: ubuntu-latest
     steps:
       - name: "Checkout"
