Fix Snapcraft for core22
Signed-off-by: Chaitanya Munukutla <chaitanya.m61292@gmail.com>

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -11,7 +11,7 @@ parts:
   perimeter:
     source: .
     plugin: flutter
-    flutter-revision: 3.13.8
+    flutter-channel: stable
     flutter-target: lib/main.dart
 
 slots:
