--- a/.github/workflows/pr-check.yaml
+++ b/.github/workflows/pr-check.yaml
@@ -5,7 +5,11 @@ on:
     branches:
       - "main"
 jobs:
+  analyze:
+    uses: ./.github/workflows/analyze.yaml
   test:
+    needs:
+      - analyze
     uses: ./.github/workflows/test.yaml
   build-snap:
     needs:
