Add types for reusable workflows
Signed-off-by: Chaitanya Munukutla <chaitanya.m61292@gmail.com>

--- a/.github/workflows/publish-snap.yaml
+++ b/.github/workflows/publish-snap.yaml
@@ -3,8 +3,10 @@ on:
     inputs:
       snap-path:
         required: true
+        type: string
       release:
         required: true
+        type: string
     secrets:
       snapcraft-store-credentials:
         required: true
