--- a/.github/workflows/build-snap.yaml
+++ b/.github/workflows/build-snap.yaml
@@ -15,3 +15,8 @@ jobs:
       - name: "Run Snapcraft"
         id: "build"
         uses: snapcore/action-build@v1
+      - name: "Upload Snapcraft"
+        uses: actions/upload-artifact@v3
+        with:
+          name: snap-artifact
+          path: ${{ steps.build.outputs.snap }}
